--- a/resources/sass/app/layouts/default/_page.scss
+++ b/resources/sass/app/layouts/default/_page.scss
@@ -7,7 +7,7 @@
 
     .main.content {
       min-height:       calc(100vh - $app-block-size);
-      width:            100vw;
+      width:            100%;
 
         >.container {
           min-height:       calc(100vh - $app-block-size);
